<resources>
    <string name="app_name">Project5</string>
    <string name="textview">Welcome to RUCafe!</string>
    <string name="donuts">Donuts</string>
    <string name="donutsTextView">Order Donuts</string>
    <string name="orderCoffee">Order Coffee</string>
    <string name="coffee">Coffee</string>
    <string name="orderBasket">Order basket</string>
    <string name="basket">TODO</string>
    <string name="storeOrders">Store Orders</string>
    <string name="list">list</string>
    <string name="subtotal">subtotal</string>
    <string name="tax">tax</string>
    <string name="subtotalTaxed">subtotal w/ tax</string>
    <string name="submitOrder">Submit</string>
    <string name="removeItem">Remove</string>
    <string name="orderBasketTitle">Order Cart</string>
    <string name="storeOrderTitle">Store Orders</string>
    <string name="cancelStoreOrder">Cancel Order</string>
    <string name="imageCart">TODO</string>
    <string name="coffeeImageView">TODO</string>
    <string name="cream">cream</string>
    <string name="syrup">syrup</string>
    <string name="milk">milk</string>
    <string name="caramel">caramel</string>
    <string name="whippedcream">whipped cream</string>
    <string name="coffeeSubtotal">total</string>
    <string name="addCoffee">Add to Order</string>
    <string name="subtotalText">subtotal</string>
    <string name="taxText">taxes</string>
    <string name="subWTaxText">total with tax</string>
    <string name="donut_flavor">Donut Flavor</string>
    <string name="donut_price">Donut Price</string>
    <string name="add_to_order">Add to order</string>
    <string-array name = "donutFlavors">
        <item>Yeast Strawberry</item>
        <item>Yeast Plain</item>
        <item>Yeast Chocolate</item>
        <item>Yeast Berries</item>
        <item>Cake Boston-sCream</item>
        <item>Cake Powdered</item>
        <item>Cake Glazed</item>
        <item>Cake Jelly</item>
        <item>Holes Butternut</item>
        <item>Holes Maple-Frosted</item>
        <item>Holes Rainbow-Sprinkles</item>
        <item>Holes Toasted-Coconut</item>
    </string-array>
    <string-array name = "donutPrices">
        <item>$1.59</item>
        <item>$1.59</item>
        <item>$1.59</item>
        <item>$1.59</item>
        <item>$1.79</item>
        <item>$1.79</item>
        <item>$1.79</item>
        <item>$1.79</item>
        <item>$0.39</item>
        <item>$0.39</item>
        <item>$0.39</item>
        <item>$0.39</item>
    </string-array>
</resources>