<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="255dp"
            android:layout_height="244dp" app:srcCompat="@drawable/coffeeorder" android:id="@+id/coffeeImageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="78dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="417dp" android:layout_marginEnd="78dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/coffeeImageView"/>
    <CheckBox
            android:text="@string/cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cream"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="31dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="328dp" android:layout_marginEnd="286dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
            android:text="@string/syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/syrup"
            android:layout_marginStart="24dp" app:layout_constraintStart_toEndOf="@+id/cream"
            android:layout_marginEnd="179dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="328dp"
            app:layout_constraintHorizontal_bias="0.777"/>
    <CheckBox
            android:text="@string/milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/milk"
            android:layout_marginStart="27dp"
            app:layout_constraintStart_toEndOf="@+id/syrup" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="328dp" android:layout_marginEnd="85dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
    />
    <CheckBox
            android:text="@string/caramel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/caramel"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="38dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="248dp"
            android:layout_marginEnd="279dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"/>
    <CheckBox
            android:text="@string/whippedcream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/whippedcream"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="248dp"
            android:layout_marginEnd="156dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="36dp" app:layout_constraintStart_toEndOf="@+id/caramel"
            app:layout_constraintHorizontal_bias="0.029"/>
    <TextView
            android:text="@string/coffeeSubtotal"
            android:layout_width="230dp"
            android:layout_height="41dp" android:id="@+id/coffeeTotalOrder"
            android:layout_marginEnd="306dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="132dp"
            app:layout_constraintHorizontal_bias="0.184"
            android:textSize="20sp" android:textColor="#000000"/>
    <Button
            android:text="@string/addCoffee"
            android:layout_width="243dp"
            android:layout_height="51dp" android:id="@+id/addCoffeeButton"
            android:layout_marginEnd="84dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="36dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="84dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Spinner
            android:layout_width="141dp"
            android:layout_height="56dp" android:id="@+id/coffeeSize"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/whippedcream" android:layout_marginBottom="92dp"
            app:layout_constraintBottom_toTopOf="@+id/addCoffeeButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="270dp" android:layout_marginEnd="5dp" tools:ignore="SpeakableTextPresentCheck"/>
</androidx.constraintlayout.widget.ConstraintLayout>