<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/title"
            android:textSize="30sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginEnd="141dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="696dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="142dp"/>
    <ImageButton
            android:layout_width="140dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_height="142dp" app:srcCompat="@drawable/donutsimage" android:id="@+id/homeDonuts"
            android:contentDescription="@string/donuts" android:layout_marginTop="82dp"
            app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="41dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="321dp" android:layout_marginEnd="68dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/donutsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/homeDonuts" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="76dp" android:layout_marginEnd="252dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="442dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageButton
            android:layout_width="142dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_height="141dp" app:srcCompat="@drawable/coffee" android:id="@+id/homeCoffee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="460dp" app:layout_constraintHorizontal_bias="0.862"
            android:layout_marginTop="83dp" app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" android:contentDescription="@string/coffee"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:text="@string/orderCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/homeCoffee" android:layout_marginEnd="66dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="441dp" android:layout_marginStart="106dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"/>
    <ImageButton
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_width="140dp"
            android:layout_height="142dp" app:srcCompat="@drawable/cartimage" android:id="@+id/imageButton4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="228dp"
            android:layout_marginEnd="220dp" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="41dp" app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintVertical_bias="1.0" tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/basket"/>
    <TextView
            android:text="@string/orderBasket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="68dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="208dp" android:layout_marginEnd="262dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageButton
            android:layout_width="142dp"
            android:scaleType="fitCenter"
            android:layout_height="142dp" app:srcCompat="@drawable/list" android:id="@+id/imageButton5"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="228dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/imageButton4" android:layout_marginStart="45dp"
            android:contentDescription="@string/list"/>
    <TextView
            android:text="@string/storeOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" android:layout_marginStart="115dp"
            app:layout_constraintStart_toEndOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="208dp" android:layout_marginEnd="68dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>